Fix display issue with gift icon

--- a/src/css/adaptive.less
+++ b/src/css/adaptive.less
@@ -42,7 +42,6 @@
     }
   }
 
-
   .advantages__image {
     max-width: 400px;
 
@@ -234,7 +233,7 @@
         margin: 0;
         top: 0;
         left: 0;
-        background: rgb(235 168 177 / 80%);
+        background: @main-background-pink;
         z-index: 3;
 
         .close {
@@ -548,3 +547,5 @@
     }
   }
 }
+
+@import "theme";
